integration_tests/tests/integration_tests/snapshots/integration_tests__get_nft_editions_tests__get_nft_editions_for_mint-get-edition-limit.snap
---
source: integration_tests/tests/integration_tests/get_nft_editions_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 2,
  "limit": 2,
  "page": 1,
  "master_edition_address": "8SHfqzJYABeGfiG1apwiEYt6TvfGQiL1pdwEjvTKsyiZ",
  "supply": 66,
  "max_supply": 69,
  "editions": [
    {
      "mint": "GJvFDcBWf6aDncd1TBzx2ou1rgLFYaMBdbYLBa9oTAEw",
      "edition_address": "AoxgzXKEsJmUyF5pBb3djn9cJFA26zh2SQHvd9EYijZV",
      "edition": 1
    },
    {
      "mint": "9yQecKKYSHxez7fFjJkUvkz42TLmkoXzhyZxEf2pw8pz",
      "edition_address": "giWoA4jqHFkodPJgtbRYRcYtiXbsVytnxnEao3QT2gg",
      "edition": 2
    }
  ]
}
