integration_tests/tests/integration_tests/snapshots/integration_tests__get_nft_editions_tests__get_nft_editions_for_mint-get-master-edition-nfts.snap
---
source: integration_tests/tests/integration_tests/get_nft_editions_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 4,
  "limit": 1000,
  "page": 1,
  "master_edition_address": "8SHfqzJYABeGfiG1apwiEYt6TvfGQiL1pdwEjvTKsyiZ",
  "supply": 66,
  "max_supply": 69,
  "editions": [
    {
      "mint": "GJvFDcBWf6aDncd1TBzx2ou1rgLFYaMBdbYLBa9oTAEw",
      "edition_address": "AoxgzXKEsJmUyF5pBb3djn9cJFA26zh2SQHvd9EYijZV",
      "edition": 1
    },
    {
      "mint": "9yQecKKYSHxez7fFjJkUvkz42TLmkoXzhyZxEf2pw8pz",
      "edition_address": "giWoA4jqHFkodPJgtbRYRcYtiXbsVytnxnEao3QT2gg",
      "edition": 2
    },
    {
      "mint": "7AeRUkukNCpWFtxK2QBZr1PymzPde6qtQYND6CajrE2B",
      "edition_address": "8WiF9TKG5p4YuyzYH2nCFxzpDMTjBeoF628QctSjJj21",
      "edition": 3
    },
    {
      "mint": "5bEXK3igzQHXchPz36bGGrvmVF39p8iB1NJVgA5hWH3h",
      "edition_address": "7LH1ZhFHpgLL81HvFaKCYiRvXLaNTqwN1jo6z6eQeL7B",
      "edition": 15
    }
  ]
}
